--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
             <ul>
@@ -34,6 +34,30 @@
             <img src="images/hardy.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, asperiores soluta? Dictipsam perspiciatis earum libero! Quis necessitatibus excepturi voluptas officiis harum mollitia ipsam!Dolorum aut ipsum explicabo id. Dicta voluptas facere suscipit mollitia nostrum omnis laborum minus abatque!</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-des">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-des">maryhardy@gamil.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Speciality:</p>
+                    <p class="info-des">Web Developer</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Contact:</p>
+                    <p class="info-des">012345678902</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
