--- a/index.html
+++ b/index.html
@@ -57,6 +57,103 @@
                 </div>
             </div>
         </section>
+
+       <section class="what-I-do">
+        <h3 class="section-title">What I Do</h3>
+<div class="skills-container">
+    <div class="skill">
+        <img src="images/icons/js.png" alt="">
+        <p class="skill-ttile">JS</p>
+
+        <p class="skill-des">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas velit officiis fugit expedita dolor illum suscipit sint veritatis. Ex placeat voluptatem animi ullam tenetur, aspernatur iure doloribus nostrum aut officia?
+        </p>
+    </div>
+
+    <div class="skill">
+        <img src="images/icons/nodejs.png" alt="">
+        <p class="skill-ttile">NodeJS</p>
+
+        <p class="skill-des">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas velit officiis fugit expedita dolor illum suscipit sint veritatis. Ex placeat voluptatem animi ullam tenetur, aspernatur iure doloribus nostrum aut officia?
+        </p>
+    </div>
+
+    <div class="skill">
+        <img src="images/icons/mongo.png" alt="">
+        <p class="skill-ttile">MongoDB</p>
+
+        <p class="skill-des">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas velit officiis fugit expedita dolor illum suscipit sint veritatis. Ex placeat voluptatem animi ullam tenetur, aspernatur iure doloribus nostrum aut officia?
+        </p>
+    </div>
+
+    <div class="skill">
+        <img src="images/icons/react.png" alt="">
+        <p class="skill-ttile">React</p>
+
+        <p class="skill-des">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas velit officiis fugit expedita dolor illum suscipit sint veritatis. Ex placeat voluptatem animi ullam tenetur, aspernatur iure doloribus nostrum aut officia?
+        </p>
+    </div>
+</div>
+       </section> 
+
+       <section class="resume">
+        <h3 class="section-title">A Summary Of My Resume</h3>
+        <div class="resume-content">
+            <div>
+                <h3 class="resume-title">My Education</h3>
+                <div class="resume-item">
+                    <h4 class="title">MSC</h4>
+                    <h5 class="subttile">College Name:</h5>
+                    <p class="des">Harvard</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">BSC</h4>
+                    <h5 class="subttile">College Name2:</h5>
+                    <p class="des">SPSC</p>
+                </div>
+
+            </div>
+            <div>
+                <h3 class="resume-title">My Experience</h3>
+                <div class="resume-item">
+                    <h4 class="title">MSC</h4>
+                    <h5 class="subttile">College Name:</h5>
+                    <p class="des">Harvard</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">BSC</h4>
+                    <h5 class="subttile">College Name2:</h5>
+                    <p class="des">SPSC</p>
+                </div>
+            </div>
+        </div>
+        <div class="resume-button"><button class="btn-primary">Download CV</button></div>
+       </section>
+
+       <section class="contact">
+        <div>
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sequi soluta illum, accusamus aliquam beatae, earum nostrum expedita, impedit officiis aspernatur! Sint possimus impedit fuga nisi dolores excepturi quaerat voluptatibus.</p>
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+        </div>
+        <div>
+            <h3 class="section-title">Let's Message Me</h3>
+            <form action="">
+                <input type="text" name=""id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <input type="phone" name="" id="" placeholder="Your phone">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+
+            </form>
+        </div>
+       </section>
     </main>
 </body>
 
