--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 </div>
        </section> 
 
+<!-- resume section -->
        <section class="resume">
         <h3 class="section-title">A Summary Of My Resume</h3>
         <div class="resume-content">
@@ -106,14 +107,14 @@
                 <h3 class="resume-title">My Education</h3>
                 <div class="resume-item">
                     <h4 class="title">MSC</h4>
-                    <h5 class="subttile">College Name:</h5>
-                    <p class="des">Harvard</p>
+                    <h5 class="subttile">Lorem,dret!</h5>
+                    <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
                 <hr>
                 <div class="resume-item">
                     <h4 class="title">BSC</h4>
-                    <h5 class="subttile">College Name2:</h5>
-                    <p class="des">SPSC</p>
+                    <h5 class="subttile">Lorem ipsum!</h5>
+                    <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
 
             </div>
@@ -122,13 +123,13 @@
                 <div class="resume-item">
                     <h4 class="title">MSC</h4>
                     <h5 class="subttile">College Name:</h5>
-                    <p class="des">Harvard</p>
+                    <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
                 <hr>
                 <div class="resume-item">
                     <h4 class="title">BSC</h4>
                     <h5 class="subttile">College Name2:</h5>
-                    <p class="des">SPSC</p>
+                    <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
             </div>
         </div>
@@ -145,7 +146,7 @@
         <div>
             <h3 class="section-title">Let's Message Me</h3>
             <form action="">
-                <input type="text" name=""id="" placeholder="Your Name">
+                <input type="text" name="" id="" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
                 <input type="phone" name="" id="" placeholder="Your phone">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
