--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </p>
                 <button class="btn-primary">Download CV</button>
             </div>
+            
             <img src="images/hardy.png" alt="">
         </div>
     </header>
@@ -107,13 +108,13 @@
                 <h3 class="resume-title">My Education</h3>
                 <div class="resume-item">
                     <h4 class="title">MSC</h4>
-                    <h5 class="subttile">Lorem,dret!</h5>
+                    <h5 class="subtitle">Lorem,dret!</h5>
                     <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
                 <hr>
                 <div class="resume-item">
                     <h4 class="title">BSC</h4>
-                    <h5 class="subttile">Lorem ipsum!</h5>
+                    <h5 class="subtitle">Lorem ipsum!</h5>
                     <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
 
@@ -122,20 +123,20 @@
                 <h3 class="resume-title">My Experience</h3>
                 <div class="resume-item">
                     <h4 class="title">MSC</h4>
-                    <h5 class="subttile">College Name:</h5>
+                    <h5 class="subtitle">College Name:</h5>
                     <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
                 <hr>
                 <div class="resume-item">
                     <h4 class="title">BSC</h4>
-                    <h5 class="subttile">College Name2:</h5>
+                    <h5 class="subtitle">College Name2:</h5>
                     <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero mollitia culpa, neque nemo omnis.</p>
                 </div>
             </div>
         </div>
         <div class="resume-button"><button class="btn-primary">Download CV</button></div>
        </section>
-
+<!-- footer -->
        <section class="contact">
         <div>
             <h3 class="section-title">Let's Connect</h3>
@@ -143,6 +144,7 @@
             <a href=""><img src="images/icons/facebook.png" alt=""></a>
             <a href=""><img src="images/icons/insta.png" alt=""></a>
         </div>
+
         <div>
             <h3 class="section-title">Let's Message Me</h3>
             <form action="">
